nav overlapping fixed!! after adding animation effect in hero section!!

--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ ul li {
 }
 
 /* page load animation */
-/* body {
+ body {
   animation: fadeInAnimation ease 9s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
@@ -59,6 +59,8 @@ ul li {
   animation: transform ease 5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  position: relative;
+  z-index: -1;
 }
 
 .hero-title-wrapper_sm,.hero-title-wrapper, .stats-wrapper  {
